--- a/soccer.css
+++ b/soccer.css
@@ -13,6 +13,13 @@ h1 {
   margin: 20px;
 }
 
+#bar-chart-container h3 {
+  text-align: center; /* Centers the text horizontally */
+  margin-top: 10px; /* Adds space above the text */
+  position: relative; /* Allows custom positioning if needed */
+  bottom: 250px; /* Adjusts vertical position */
+}
+
 .controls {
   margin: 10px;
 }
@@ -179,10 +186,12 @@ svg {
   color: black;
   background-color: white;
   border: 1px solid #ccc;
+  opacity: 0.8;
   border-radius: 4px;
   padding: 5px;
   pointer-events: none; /* Ensure the tooltip doesn't block interactions */
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   display: none; /* Initially hidden */
   position: absolute; /* Positioned relative to the mouse cursor */
+  z-index: 10; /* Ensure it appears above other elements */
 }
